--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>电影</title>
+  <title>电影主页</title>
   <link href="style.css" rel="stylesheet">
   <link
       href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css"
@@ -36,10 +36,10 @@
 <nav>
   <div class="container-full-center">
     <div class="row">
-      <div class="col"><a href="#">我看</a></div>
+      <div class="col"><a href="">我看</a></div>
       <div class="col"><a href="#">影讯&购票</a></div>
-      <div class="col"><a href="#">选电影</a></div>
-      <div class="col"><a href="#">电视剧</a></div>
+      <div class="col"><a href="movie.html">选电影</a></div>
+      <div class="col"><a href="tv.html">电视剧</a></div>
       <div class="col"><a href="#">排行榜</a></div>
       <div class="col"><a href="#">分类</a></div>
       <div class="col"><a href="#">影评</a></div>
@@ -53,8 +53,6 @@
 <div class="container">
 
 </div>
-<!--主要部分-->
-<!--左侧内容-->
 <!--正在热映-->
 <section class="section">
   <div class="section-head">
