--- a/detail.html
+++ b/detail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>详情</title>
+  <title>电影详情</title>
   <link href="style.css" rel="stylesheet">
 </head>
 <body>
