--- a/seat.html
+++ b/seat.html
@@ -34,12 +34,20 @@
             <div>10</div>
           </div>
         </div>
-        <div class="seat-main"></div>
+        <div class="seat-main">
+          <div class="main-head">
+            <div class="room-name" style="color:#111;">1号厅 银幕</div>
+          </div>
+          <div class="seat-area">
+            <div class="seat-row">
+              <div class="seat"><img src="images/icons/armchair.svg" alt=""></div>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="seat-box-bottom"></div>
     </div>
   </div>
-
 </div>
 </body>
 </html>
