--- a/seat.html
+++ b/seat.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <title>选座</title>
   <link href="style.css" rel="stylesheet">
-  <script src="main.js"></script>
+  <script>
+  
+  </script>
 </head>
 <body>
 <div class="seat-container">
@@ -40,7 +42,27 @@
           </div>
           <div class="seat-area">
             <div class="seat-row">
-              <div class="seat"><img src="images/icons/armchair.svg" alt=""></div>
+              <span class="seat selectable"></span>
+              <span class="seat selectable"></span>
+            </div>
+            <div class="seat-row">
+              <span class="seat selectable"></span>
+              <span class="seat selectable"></span>
+            </div><div class="seat-row">
+              <span class="seat selectable"></span>
+              <span class="seat selectable"></span>
+            </div>
+            <div class="seat-row">
+              <span class="seat selectable"></span>
+              <span class="seat selectable"></span>
+            </div>
+            <div class="seat-row">
+              <span class="seat selectable"></span>
+              <span class="seat selectable"></span>
+            </div>
+            <div class="seat-row">
+              <span class="seat selectable"></span>
+              <span class="seat selectable"></span>
             </div>
           </div>
         </div>
