--- a/seat.html
+++ b/seat.html
@@ -5,7 +5,9 @@
   <title>选座</title>
   <link href="style.css" rel="stylesheet">
   <script>
-  
+  function select() {
+    document.;
+  }
   </script>
 </head>
 <body>
