--- a/detail.html
+++ b/detail.html
@@ -176,6 +176,11 @@
     
     </div>
   </section>
+  
+  <section>
+    <h2>小丑的获奖情况</h2>
+    
+  </section>
 </div>
 <div class="copyright-bg">
   <div class="copyright">
