--- a/theater.html
+++ b/theater.html
@@ -38,10 +38,10 @@
   </div>
   <div class="theater-list">
     <div class="theater-list-item">
-      <a href="">
+      <a href="theater-time.html">
         <div class="theater-item-info">
-          <div class="theater-item"><span class="theater-name over">杭州比高电影城</span><span class="lowestprice">33<span class="yuan">元</span><span class="qi">起</span></span></div>
-          <div class="theater-item"><span class="theater-address over">拱墅区小河路488号运河天地4幢</span><span class="distance">1.1km</span></div>
+          <div class="theater-item"><span class="theater-name over">万达影城（D32店）</span><span class="lowestprice">30.8<span class="yuan">元</span><span class="qi">起</span></span></div>
+          <div class="theater-item"><span class="theater-address over">地址：拱墅区小河路306号D32时尚购物街区A座5层</span><span class="distance">1.1km</span></div>
           <div class="theater-item"><span class="theater-recent over">最近场次:22:15</span></div>
         </div>
       </a>
@@ -49,8 +49,44 @@
     <div class="theater-list-item">
       <a href="#">
         <div class="theater-item-info">
-          <div class="theater-item"><span class="theater-name over">杭州比高电影城</span><span class="lowestprice">33<span class="yuan">元</span><span class="qi">起</span></span></div>
-          <div class="theater-item"><span class="theater-address over">拱墅区小河路488号运河天地4幢</span><span class="distance">1.1km</span></div>
+          <div class="theater-item"><span class="theater-name over">CGV影城（乐堤港IMAX店）</span><span class="lowestprice">39.9<span class="yuan">元</span><span class="qi">起</span></span></div>
+          <div class="theater-item"><span class="theater-address over">地址：拱墅区丽水路58号乐堤港5楼</span><span class="distance">1.1km</span></div>
+          <div class="theater-item"><span class="theater-recent over">最近场次:22:15</span></div>
+        </div>
+      </a>
+    </div>
+    <div class="theater-list-item">
+      <a href="#">
+        <div class="theater-item-info">
+          <div class="theater-item"><span class="theater-name over">万达影城（水晶城购物中心店）</span><span class="lowestprice">34.8<span class="yuan">元</span><span class="qi">起</span></span></div>
+          <div class="theater-item"><span class="theater-address over">地址：拱墅区上塘路458号水晶城购物中心7楼</span><span class="distance">1.1km</span></div>
+          <div class="theater-item"><span class="theater-recent over">最近场次:22:15</span></div>
+        </div>
+      </a>
+    </div>
+    <div class="theater-list-item">
+      <a href="#">
+        <div class="theater-item-info">
+          <div class="theater-item"><span class="theater-name over">比高电影城（大河店）</span><span class="lowestprice">31<span class="yuan">元</span><span class="qi">起</span></span></div>
+          <div class="theater-item"><span class="theater-address over">地址：拱墅区小河路488号4幢（近原大河造船厂）</span><span class="distance">1.1km</span></div>
+          <div class="theater-item"><span class="theater-recent over">最近场次:22:15</span></div>
+        </div>
+      </a>
+    </div>
+    <div class="theater-list-item">
+      <a href="#">
+        <div class="theater-item-info">
+          <div class="theater-item"><span class="theater-name over">德信影城（运河上街店）</span><span class="lowestprice">36.9<span class="yuan">元</span><span class="qi">起</span></span></div>
+          <div class="theater-item"><span class="theater-address over">地址：拱墅区金华路80号运河上街4楼（商场闭店后，从东区负一楼入口客梯直达）</span><span class="distance">1.1km</span></div>
+          <div class="theater-item"><span class="theater-recent over">最近场次:22:15</span></div>
+        </div>
+      </a>
+    </div>
+    <div class="theater-list-item">
+      <a href="#">
+        <div class="theater-item-info">
+          <div class="theater-item"><span class="theater-name over">万达影城（拱墅万达广场店）</span><span class="lowestprice">35.9<span class="yuan">元</span><span class="qi">起</span></span></div>
+          <div class="theater-item"><span class="theater-address over">地址：拱墅区杭行路666号万达广场5楼</span><span class="distance">1.1km</span></div>
           <div class="theater-item"><span class="theater-recent over">最近场次:22:15</span></div>
         </div>
       </a>
