--- a/tv.html
+++ b/tv.html
@@ -73,34 +73,88 @@
 </div>
 <div class="tv-list">
   <div class="tv-list-item">
-    <img alt="" src="images/joker.jpg">
+    <img alt="" src="images/runningMan.webp">
     <div class="tv-list-item-hover"><a href="detail.html">查看详情</a></div>
-    <div class="list-item-text-title"><a href="#">小丑 Joker(2019)</a></div>
-    <div class="list-item-text-score">豆瓣评分:<strong>8.8</strong></div>
+    <div class="list-item-text-title text-align-center"><a href="#">Running Man 런닝맨 (2010)</a></div>
+    <div class="list-item-text-score text-align-center">豆瓣评分:<strong>9.6</strong></div>
   </div>
   <div class="tv-list-item">
-    <img alt="" src="images/joker.jpg">
+    <img alt="" src="images/wuXianTiaoZhan.webp">
     <div class="tv-list-item-hover"><a href="detail.html">查看详情</a></div>
-    <div class="list-item-text-title"><a href="#">小丑 Joker(2019)</a></div>
-    <div class="list-item-text-score">豆瓣评分:<strong>8.8</strong></div>
+    <div class="list-item-text-title text-align-center"><a href="#">无限挑战 무한도전 (2005)</a></div>
+    <div class="list-item-text-score text-align-center">豆瓣评分:<strong>9.6</strong></div>
   </div>
   <div class="tv-list-item">
-    <img alt="" src="images/joker.jpg">
+    <img alt="" src="images/breakingBad.webp">
     <div class="tv-list-item-hover"><a href="detail.html">查看详情</a></div>
-    <div class="list-item-text-title"><a href="#">小丑 Joker(2019)</a></div>
-    <div class="list-item-text-score">豆瓣评分:<strong>8.8</strong></div>
+    <div class="list-item-text-title text-align-center"><a href="#">绝命毒师 第五季 Breaking Bad</a></div>
+    <div class="list-item-text-score text-align-center">豆瓣评分:<strong>9.6</strong></div>
   </div>
   <div class="tv-list-item">
-    <img alt="" src="images/joker.jpg">
+    <img alt="" src="images/theBigBangTheory.webp">
     <div class="tv-list-item-hover"><a href="detail.html">查看详情</a></div>
-    <div class="list-item-text-title"><a href="#">小丑 Joker(2019)</a></div>
-    <div class="list-item-text-score">豆瓣评分:<strong>8.8</strong></div>
+    <div class="list-item-text-title text-align-center"><a href="#">生活大爆炸 第十二季 The Big Bang Theory</a></div>
+    <div class="list-item-text-score text-align-center">豆瓣评分:<strong>9.6</strong></div>
   </div>
   <div class="tv-list-item">
-    <img alt="" src="images/joker.jpg">
+    <img alt="" src="images/friends.webp">
     <div class="tv-list-item-hover"><a href="detail.html">查看详情</a></div>
-    <div class="list-item-text-title"><a href="#">小丑 Joker(2019)</a></div>
-    <div class="list-item-text-score">豆瓣评分:<strong>8.8</strong></div>
+    <div class="list-item-text-title text-align-center"><a href="#">老友记 第十季 Friends</a></div>
+    <div class="list-item-text-score text-align-center">豆瓣评分:<strong>9.8</strong></div>
+  </div>
+  <div class="tv-list-item">
+    <img alt="" src="images/1998.webp">
+    <div class="tv-list-item-hover"><a href="detail.html">查看详情</a></div>
+    <div class="list-item-text-title text-align-center"><a href="#">请回答1988 응답하라 1988 (2015)</a></div>
+    <div class="list-item-text-score text-align-center">豆瓣评分:<strong>9.7</strong></div>
+  </div>
+  <div class="tv-list-item">
+    <img alt="" src="images/qinYuNian.webp">
+    <div class="tv-list-item-hover"><a href="detail.html">查看详情</a></div>
+    <div class="list-item-text-title text-align-center"><a href="#">庆余年 (2019)</a></div>
+    <div class="list-item-text-score text-align-center">豆瓣评分:<strong>7.9</strong></div>
+  </div>
+  <div class="tv-list-item">
+    <img alt="" src="images/beginAgain3.webp">
+    <div class="tv-list-item-hover"><a href="detail.html">查看详情</a></div>
+    <div class="list-item-text-title text-align-center"><a href="#">再次出发3 비긴어게인 3 (2019)</a></div>
+    <div class="list-item-text-score text-align-center">豆瓣评分:<strong>9.5</strong></div>
+  </div>
+  <div class="tv-list-item">
+    <img alt="" src="images/mingXingDaZhenTan.webp">
+    <div class="tv-list-item-hover"><a href="detail.html">查看详情</a></div>
+    <div class="list-item-text-title text-align-center"><a href="#">明星大侦探 第五季 (2019)</a></div>
+    <div class="list-item-text-score text-align-center">豆瓣评分:<strong>8.8</strong></div>
+  </div>
+  <div class="tv-list-item">
+    <img alt="" src="images/qiPaShuo.webp">
+    <div class="tv-list-item-hover"><a href="detail.html">查看详情</a></div>
+    <div class="list-item-text-title text-align-center"><a href="#">奇葩说 第六季 (2019)</a></div>
+    <div class="list-item-text-score text-align-center">豆瓣评分:<strong>8.0</strong></div>
+  </div>
+  <div class="tv-list-item">
+    <img alt="" src="images/wuLinWaiZhuan.webp">
+    <div class="tv-list-item-hover"><a href="detail.html">查看详情</a></div>
+    <div class="list-item-text-title text-align-center"><a href="#">武林外传 (2006)</a></div>
+    <div class="list-item-text-score text-align-center">豆瓣评分:<strong>9.5</strong></div>
+  </div>
+  <div class="tv-list-item">
+    <img alt="" src="images/siliconValley.webp">
+    <div class="tv-list-item-hover"><a href="detail.html">查看详情</a></div>
+    <div class="list-item-text-title text-align-center"><a href="#">硅谷 第六季 Silicon Valley</a></div>
+    <div class="list-item-text-score text-align-center">豆瓣评分:<strong>9.5</strong></div>
+  </div>
+  <div class="tv-list-item">
+    <img alt="" src="images/modernFamily.webp">
+    <div class="tv-list-item-hover"><a href="detail.html">查看详情</a></div>
+    <div class="list-item-text-title text-align-center"><a href="#">摩登家庭 第十一季 Modern Family</a></div>
+    <div class="list-item-text-score text-align-center">豆瓣评分:<strong>9.4</strong></div>
+  </div>
+  <div class="tv-list-item">
+    <img alt="" src="images/xiaoLiJiaMinSu.webp">
+    <div class="tv-list-item-hover"><a href="detail.html">查看详情</a></div>
+    <div class="list-item-text-title text-align-center"><a href="#">孝利家民宿 第一季 효리네민박 (2017)</a></div>
+    <div class="list-item-text-score text-align-center">豆瓣评分:<strong>9.4</strong></div>
   </div>
 </div>
 <!--版权信息-->
