--- a/movie.html
+++ b/movie.html
@@ -74,9 +74,9 @@
 <div class="list">
   <div class="list-box">
     <div class="list-item">
-      <a class="list-item-img" href="#"><img alt="" src="images/joker.jpg"></a>
+      <a class="list-item-img" href="detail.html"><img alt="" src="images/joker.jpg"></a>
       <div class="list-item-text">
-        <div class="list-item-text-title"><a href="#">小丑 Joker(2019)</a></div>
+        <div class="list-item-text-title"><a href="detail.html">小丑 Joker(2019)</a></div>
         <div class="list-item-text-score">豆瓣评分:<strong>8.8</strong></div>
         <div class="list-item-text-describe">
           本片的故事将独立于DCEU之外，故事背景设置在20世纪80年代，讲述了一位生活陷入困境的脱口秀喜剧演员渐渐走向精神的崩溃，在哥谭市开始了疯狂的犯罪生涯，最终成为了蝙蝠侠的宿敌“小丑”的故事。
@@ -86,8 +86,135 @@
           <span>上映日期: 2019-08-31(威尼斯电影节) / 2019-10-04(美国)</span>
         </div>
         <div>导演: 托德·菲利普斯, 编剧: 托德·菲利普斯 / 斯科特·西尔弗 / 鲍勃·凯恩 / 比尔·芬格 / 杰瑞·罗宾逊</div>
-        <div>主演: 杰昆·菲尼克斯 / 罗伯特·德尼罗 / 马克·马龙 / 莎姬·贝兹 /谢伊·惠格姆/<a href="#">更多...</a>
+        <div>主演: 杰昆·菲尼克斯 / 罗伯特·德尼罗 / 马克·马龙 / 莎姬·贝兹 /谢伊·惠格姆/<a href="detail.html">更多...</a></div>
+      </div>
+    </div>
+    <div class="list-item">
+      <a class="list-item-img" href="#"><img alt="" src="images/avengers.webp"></a>
+      <div class="list-item-text">
+        <div class="list-item-text-title"><a href="#">复仇者联盟4：终局之战 Avengers: Endgame (2019)</a></div>
+        <div class="list-item-text-score">豆瓣评分:<strong>8.5</strong></div>
+        <div class="list-item-text-describe">
+          一声响指，宇宙间半数生命灰飞烟灭。几近绝望的复仇者们在惊奇队长（布丽·拉尔森 Brie Larson 饰）的帮助下找到灭霸（乔什·布洛林 Josh Brolin 饰）归隐之处，却得知六颗无限宝石均被销毁，希望彻底破灭。
         </div>
+        <div class="list-item-text-runtime">
+          片长: 181分钟
+          <span>上映日期: 2019-04-24(中国大陆) / 2019-04-26(美国)</span>
+        </div>
+        <div>导演: 安东尼·罗素 / 乔·罗素</div>
+        <div>主演: 小罗伯特·唐尼 / 克里斯·埃文斯 / 马克·鲁弗洛 / 克里斯·海姆斯沃斯 / 斯嘉丽·约翰逊 /<a href="#">更多...</a></div>
+      </div>
+    </div>
+    <div class="list-item">
+      <a class="list-item-img" href="#"><img alt="" src="images/neZha.webp"></a>
+      <div class="list-item-text">
+        <div class="list-item-text-title"><a href="#">哪吒之魔童降世 (2019)</a></div>
+        <div class="list-item-text-score">豆瓣评分:<strong>8.5</strong></div>
+        <div class="list-item-text-describe">
+          天地灵气孕育出一颗能量巨大的混元珠，元始天尊将混元珠提炼成灵珠和魔丸，灵珠投胎为人，助周伐纣时可堪大用；而魔丸则会诞出魔王，为祸人间。元始天尊启动了天劫咒语，3年后天雷将会降临，摧毁魔丸。
+        </div>
+        <div class="list-item-text-runtime">
+          片长: 110分钟
+          <span>上映日期: 2019-07-26(中国大陆) / 2019-07-13(大规模点映)</span>
+        </div>
+        <div>导演: 饺子</div>
+        <div>主演: 吕艳婷 / 囧森瑟夫 / 瀚墨 / 陈浩 / 绿绮 / <a href="#">更多...</a></div>
+      </div>
+    </div>
+    <div class="list-item">
+      <a class="list-item-img" href="#"><img alt="" src="images/shaoniandeni.webp"></a>
+      <div class="list-item-text">
+        <div class="list-item-text-title"><a href="#">少年的你 (2019)</a></div>
+        <div class="list-item-text-score">豆瓣评分:<strong>8.3</strong></div>
+        <div class="list-item-text-describe">
+          陈念是一名即将参加高考的高三学生，同校女生胡晓蝶的跳楼自杀让她的生活陷入了困顿之中。胡晓蝶死后，陈念遭到了以魏莱为首的三人组的霸凌，魏莱实际上却心思毒辣，胡晓蝶的死和她有着千丝万缕的联系。
+        </div>
+        <div class="list-item-text-runtime">
+          片长: 135分钟
+          <span>上映日期: 2019-10-25(中国大陆)</span>
+        </div>
+        <div>导演: 曾国祥</div>
+        <div>主演: 周冬雨 / 易烊千玺 / 尹昉 / 周也 / 吴越 / <a href="#">更多...</a></div>
+      </div>
+    </div>
+    <div class="list-item">
+      <a class="list-item-img" href="#"><img alt="" src="images/marriage.webp"></a>
+      <div class="list-item-text">
+        <div class="list-item-text-title"><a href="#">婚姻故事 Marriage Story (2019)</a></div>
+        <div class="list-item-text-score">豆瓣评分:<strong>8.8</strong></div>
+        <div class="list-item-text-describe">
+          以一起离婚事件探讨婚姻和爱情，诺亚·鲍姆巴赫执导， 亚当·德赖弗扮演一个剧作家，斯嘉丽·约翰逊扮演一个女明星，两人因各自工作分居纽约和洛杉矶而不得不走向离婚，主演另有劳拉·邓恩、格蕾塔·葛韦格。
+        </div>
+        <div class="list-item-text-runtime">
+          片长: 136分钟
+          <span>上映日期: 2019-08-29(威尼斯电影节) / 2019-12-06(美国)</span>
+        </div>
+        <div>导演: 诺亚·鲍姆巴赫</div>
+        <div>主演: 斯嘉丽·约翰逊 / 亚当·德赖弗 / 梅里特·韦弗 / 劳拉·邓恩 / 雷·利奥塔 / <a href="#">更多...</a></div>
+      </div>
+    </div>
+    <div class="list-item">
+      <a class="list-item-img" href="#"><img alt="" src="images/jinzhiying.webp"></a>
+      <div class="list-item-text">
+        <div class="list-item-text-title"><a href="#">82年生的金智英 82년생 김지영 (2019)</a></div>
+        <div class="list-item-text-score">豆瓣评分:<strong>8.7</strong></div>
+        <div class="list-item-text-describe">
+          同名小说改编而成，直击韩国家庭和社会上的性别不公议题。金智英（郑有美 饰）一直按照社会规范下的女性身份生活。直到一天她好似被附身一样，言行如同自己的母亲一般，丈夫（孔侑 饰）决定带她接受心理咨询。
+        </div>
+        <div class="list-item-text-runtime">
+          片长: 118分钟
+          <span>上映日期: 2019-11-07(中国香港) / 2019-10-23(韩国)</span>
+        </div>
+        <div>导演: 金度英</div>
+        <div>主演: 郑有美 / 孔侑 / 金美京 / 孔敏晶 / 朴成妍 / <a href="#">更多...</a></div>
+      </div>
+    </div>
+    <div class="list-item">
+      <a class="list-item-img" href="#"><img alt="" src="images/irishman.webp"></a>
+      <div class="list-item-text">
+        <div class="list-item-text-title"><a href="#">爱尔兰人 The Irishman (2019)</a></div>
+        <div class="list-item-text-score">豆瓣评分:<strong>9.0</strong></div>
+        <div class="list-item-text-describe">
+          《爱尔兰人》为马丁·斯科塞斯执导的传奇巨制，罗伯特·德尼罗、阿尔·帕西诺和乔·佩西主演。通过二战老兵弗兰克·希兰的视角，讲述了战后美国有组织犯罪的故事。该电影跨越数十年，记录了美国历史上最大的悬案之一
+        </div>
+        <div class="list-item-text-runtime">
+          片长: 210分钟
+          <span>上映日期: 2019-09-27(纽约电影节) / 2019-11-01(美国点映) / 2019-11-27(美国网络)</span>
+        </div>
+        <div>导演: 马丁·斯科塞斯</div>
+        <div>主演: 罗伯特·德尼罗 / 阿尔·帕西诺 / 乔·佩西 / 安娜·帕奎因 / 杰西·普莱蒙 / <a href="#">更多...</a></div>
+      </div>
+    </div>
+    <div class="list-item">
+      <a class="list-item-img" href="#"><img alt="" src="images/captain.webp"></a>
+      <div class="list-item-text">
+        <div class="list-item-text-title"><a href="#">中国机长 (2019)</a></div>
+        <div class="list-item-text-score">豆瓣评分:<strong>6.9</strong></div>
+        <div class="list-item-text-describe">
+          根据真实事件改编。机组执行航班任务时，在万米高空突遇驾驶舱风挡玻璃爆裂脱落、座舱释压的极端罕见险情，生死关头，他们临危不乱、果断应对、正确处置，确保了机上全部人员的生命安全，创造了世界民航史上的奇迹。
+        </div>
+        <div class="list-item-text-runtime">
+          片长: 111分钟
+          <span>上映日期: 2019-09-30(中国大陆)</span>
+        </div>
+        <div>导演: 刘伟强</div>
+        <div>主演: 张涵予 / 欧豪 / 杜江 / 袁泉 / 张天爱 / <a href="#">更多...</a></div>
+      </div>
+    </div>
+    <div class="list-item">
+      <a class="list-item-img" href="#"><img alt="" src="images/downton.webp"></a>
+      <div class="list-item-text">
+        <div class="list-item-text-title"><a href="#">唐顿庄园 Downton Abbey (2019)</a></div>
+        <div class="list-item-text-score">豆瓣评分:<strong>8.2</strong></div>
+        <div class="list-item-text-describe">
+          电影版《唐顿庄园》讲述了新的故事：一向暗流涌动的唐顿庄园突然接到一封意外信件，英国皇室即将造访。当象征着大不列颠最高权力的国王夫妇来到这座偏安一隅的乡间宅邸，等待唐顿庄园主人们的将会是怎样的挑战；
+        </div>
+        <div class="list-item-text-runtime">
+          片长: 122分钟 / 120分钟(中国大陆)
+          <span>上映日期: 2019-12-13(中国大陆) / 2019-09-13(英国)</span>
+        </div>
+        <div>导演: 迈克尔·恩格勒</div>
+        <div>主演: 米歇尔·道克瑞 / 休·博纳维尔 / 伊丽莎白·麦戈文 / 玛吉·史密斯 / 艾美达·斯丹顿 / <a href="#">更多...</a></div>
       </div>
     </div>
   </div>
