--- a/theater-time.html
+++ b/theater-time.html
@@ -37,20 +37,52 @@
     <div></div>
   </div>
   <div class="time-list">
-    <div class="time-list-item" href="">
+    <div class="time-list-item">
       <div class="time">
-        <div class="time-start">10:10</div>
-        <div class="time-end">12:21散场</div>
+        <div class="time-start">11:30</div>
+        <div class="time-end">13:22散场</div>
       </div>
       <div class="time-list-movie-info">
         <div class="language">国语2D</div>
-        <div class="movie-hall">3号天域全感音厅</div>
+        <div class="movie-hall">3翼龙厅</div>
       </div>
       <div class="time-list-price">
-        <span class="lowestprice">38<span class="yuan">元</span></span>
+        <span class="lowestprice">29.8<span class="yuan">元</span></span>
       </div>
-      <div class="time-list-btn">
-        <button onclick="seat()" value="购票">购票</button>
+      <div class="time-list-btn-box">
+        <button onclick="seat()" value="购票" class="time-list-btn">选座购票</button>
+      </div>
+    </div>
+    <div class="time-list-item">
+      <div class="time">
+        <div class="time-start">12:20</div>
+        <div class="time-end">14:12散场</div>
+      </div>
+      <div class="time-list-movie-info">
+        <div class="language">国语2D</div>
+        <div class="movie-hall">7霸王龙厅</div>
+      </div>
+      <div class="time-list-price">
+        <span class="lowestprice">30.8<span class="yuan">元</span></span>
+      </div>
+      <div class="time-list-btn-box">
+        <button onclick="seat()" value="购票" class="time-list-btn">选座购票</button>
+      </div>
+    </div>
+    <div class="time-list-item">
+      <div class="time">
+        <div class="time-start">12:20</div>
+        <div class="time-end">14:12散场</div>
+      </div>
+      <div class="time-list-movie-info">
+        <div class="language">国语2D</div>
+        <div class="movie-hall">7霸王龙厅</div>
+      </div>
+      <div class="time-list-price">
+        <span class="lowestprice">30.8<span class="yuan">元</span></span>
+      </div>
+      <div class="time-list-btn-box">
+        <button onclick="seat()" value="购票" class="time-list-btn">选座购票</button>
       </div>
     </div>
   </div>
